--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -10,14 +10,33 @@
   .gap-large {
     gap: 2rem;
   }
+
+  .button.btn-category {
+    padding: 0;
+    top: 6.5rem;
+    border: 1px solid var(--accent-color);
+    border-radius: 50%;
+    color: var(--text-color-primary);
+    height: 24px;
+    width: 24px;
+  }
+
+
+  .btn-left{
+    left: 2rem;
+  }
+
+  .btn-right{
+    right: 18rem;
+  }
   
-  .rec.rec-swipable{
+  /* .rec.rec-swipable{
     gap: 1.5rem;
   }
   
   .rec.rec-item-wrapper {
     width: max-content !important;
-  }
+  } */
   
   .category-color {
     background-color: var(--primary-color);
@@ -40,14 +59,18 @@
     border-radius: 2rem;
     border: 1px solid var(--accent-color);
     align-self: flex-start;
+    position: relative;
+    right: -2rem;
+    
   }
+
   
   .btn-filter:hover,
   .btn-category:hover {
     box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.1);
   }
   
-  .rec.rec-arrow:disabled {
+  /* .rec.rec-arrow:disabled {
     visibility: hidden;
   }
   
@@ -57,4 +80,4 @@
     min-width: 1.5rem;
     line-height: 1.5rem;
     font-size: 1rem;
-  }
+  } */ 
